syntax = "proto3";
package schools;
import "google/protobuf/any.proto";
import "base.proto";
import "city.proto";
import "education.proto";
import "country.proto";

service SchoolService {
  rpc getById(Id) returns (GetOneResponse) {}
  rpc getList(QuerySchool) returns (GetListResponse) {}
  rpc create(School) returns (GetOneResponse) {}
  rpc update(School) returns (GetOneResponse) {}
  rpc delete(Id) returns (DeleteResponse) {}
}
message School {
  optional int32 id = 1;
  optional string createdAt = 2;
  optional string updatedAt = 3;
  optional string createdBy = 4;
  optional string updatedBy = 5;
  optional string state = 6;
  optional string name = 7;
  optional int32 countryId = 8;
  optional int32 cityId = 9;
  repeated Education educations = 10;
  optional City city = 11;
  optional Country country = 12;
}
message QuerySchool {
  optional int32 id = 1;
  optional string createdAt = 2;
  optional string updatedAt = 3;
  optional string createdBy = 4;
  optional string updatedBy = 5;
  optional string state = 6;
  optional int32 page = 7;
  optional int32 limit = 8;
  optional string sortBy = 9;
  optional string sortOrder = 10;
  optional string name = 11;
  optional int32 countryId = 12;
  optional int32 cityId = 13;
}

message GetListResponse {
  string message = 1;
  optional int32 totalItems = 2;
  optional int32 perPage = 3;
  optional int32 totalPages = 4;
  optional int32 page = 5;
  repeated School data = 6;
}

message GetOneResponse {
  string message = 1;
  optional School data = 2;
}
